--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="R in insurance 2013 : Files from the R in Insurance conference 15 July 2013" />
+    <meta name="description" content="R in Insurance 2013 : Files from the R in Insurance conference 15 July 2013" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/mages/R_in_Insurance_2013">View on GitHub</a>
 
-          <h1 id="project_title">R in insurance 2013</h1>
+          <h1 id="project_title">R in Insurance 2013</h1>
           <h2 id="project_tagline">Files from the R in Insurance conference 15 July 2013</h2>
 
             <section id="downloads">
