--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <p>The 2013 R in Insurance conference builds upon the success of the <a href="http://www.rinfinance.com/">R in Finance</a> and <a href="https://www.rmetrics.org/">R/Rmetrics</a> events.</p>
 
-<p>Accepted talks covered: </p>
+<p>The <a href="https://github.com/mages/R_in_Insurance_2013/blob/master/R_in_Insurance_Programme_and_Abstracts.pdf?raw=true">programme</a> included accepted talks covering: </p>
 
 <ul>
 <li>Pricing</li>
