--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a name="r--in-insurance-conference-2013" class="anchor" href="#r--in-insurance-conference-2013"><span class="octicon octicon-link"></span></a>R  in Insurance Conference 2013</h1>
 
-<p>This repository contains the presentation files of the first <em>R in Insurance</em> conference held at <a href="http://www.cass.city.ac.uk/news-and-events/conferences/r-in-insurance">Cass Business School London</a>, 15 July 2015. You can download all files in a .tar.gz or .zip archive format via the links above, or individually from the <a href="https://github.com/mages/R_in_Insurance_2013">GitHub repository</a>.</p>
+<p>This repository contains the presentation files of the first <em><a href="http://lamages.blogspot.com/p/the-first-conference-on-r-in-insurance.html">R in Insurance</a></em> conference held at <a href="http://www.cass.city.ac.uk/news-and-events/conferences/r-in-insurance">Cass Business School London</a>, 15 July 2015. You can download all files in a .tar.gz or .zip archive format via the links above, or individually from the <a href="https://github.com/mages/R_in_Insurance_2013">GitHub repository</a>.</p>
 
 <p>The 2013 R in Insurance conference builds upon the success of the <a href="http://www.rinfinance.com/">R in Finance</a> and <a href="https://www.rmetrics.org/">R/Rmetrics</a> events.</p>
 
