Updated with programme embed.

--- a/index.html
+++ b/index.html
@@ -34,27 +34,15 @@
         <h1>
 <a name="r--in-insurance-conference-2013" class="anchor" href="#r--in-insurance-conference-2013"><span class="octicon octicon-link"></span></a>R  in Insurance Conference 2013</h1>
 
-<p>This repository contains the presentation files of the first <em><a href="http://lamages.blogspot.com/p/the-first-conference-on-r-in-insurance.html">R in Insurance</a></em> conference held at <a href="http://www.cass.city.ac.uk/news-and-events/conferences/r-in-insurance">Cass Business School London</a>, 15 July 2015. You can download all files in a .tar.gz or .zip archive format via the links above, or individually from the <a href="https://github.com/mages/R_in_Insurance_2013">GitHub repository</a>.</p>
+<p>This repository contains the presentation and R files of the first <em><a href="http://lamages.blogspot.com/p/the-first-conference-on-r-in-insurance.html">R in Insurance</a></em> conference held at <a href="http://www.cass.city.ac.uk/news-and-events/conferences/r-in-insurance">Cass Business School London</a>, 15 July 2015. You can download all files in a .tar.gz or .zip archive format via the links above, or individually from the <a href="https://github.com/mages/R_in_Insurance_2013">GitHub repository</a>.</p>
 
 <p>The 2013 R in Insurance conference builds upon the success of the <a href="http://www.rinfinance.com/">R in Finance</a> and <a href="https://www.rmetrics.org/">R/Rmetrics</a> events.</p>
 
-<p>The <a href="https://github.com/mages/R_in_Insurance_2013/blob/master/R_in_Insurance_Programme_and_Abstracts.pdf?raw=true">programme</a> included accepted talks covering: </p>
+<p>The organisers, <a href="http://lamages.blogspot.com/">Markus Gesmann</a> and <a href="http://www.cass.city.ac.uk/experts/a.tsanakas">Andreas Tsanakas</a>, gratefully acknowledge the sponsorship of <a href="http://www.mango-solutions.com/">Mango Solutions</a> and <a href="http://www.cybaea.net/">CYBAEA</a>.
 
-<ul>
-<li>Pricing</li>
-<li>Reserving</li>
-<li>Data mining</li>
-<li>Capital modelling</li>
-<li>Automate reporting</li>
-<li>Catastrophe modelling</li>
-<li>High-performance computing</li>
-<li>Software development management</li>
-</ul><p>The organisers, <a href="http://lamages.blogspot.com/">Markus Gesmann</a> and <a href="http://www.cass.city.ac.uk/experts/a.tsanakas">Andreas Tsanakas</a>, gratefully acknowledge the sponsorship of:</p>
-
-<ul>
-<li><a href="http://www.mango-solutions.com/">Mango Solutions</a></li>
-<li><a href="http://www.cybaea.net/">CYBAEA</a></li>
-</ul>
+<div align="center">
+<embed src="https://github.com/mages/R_in_Insurance_2013/blob/master/R_in_Insurance_Programme_and_Abstracts.pdf?raw=true" width="590" height="810"> 
+</div>
       </section>
     </div>
 
