Added reference to PDFObject

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <meta name="description" content="R in Insurance 2013 : Files from the R in Insurance conference 15 July 2013" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  
+  <script type="text/javascript" src="http://pdfobject.com/scripts/pdfobject.js"></script>
+  <script type="text/javascript">
 
-    <title>R in insurance 2013</title>
+  window.onload = function (){
+  var success = new PDFObject({ width:"590px", height:"810px", url: "http://github.com/mages/R_in_Insurance_2013/blob/master/R_in_Insurance_Programme_and_Abstracts.pdf?raw=true" }).embed("pdf");
+  };
+
+</script>
+  
+<title>R in insurance 2013</title>
   </head>
 
   <body>
@@ -40,9 +49,10 @@
 
 <p>The organisers, <a href="http://lamages.blogspot.com/">Markus Gesmann</a> and <a href="http://www.cass.city.ac.uk/experts/a.tsanakas">Andreas Tsanakas</a>, gratefully acknowledge the sponsorship of <a href="http://www.mango-solutions.com/">Mango Solutions</a> and <a href="http://www.cybaea.net/">CYBAEA</a>.
 
-<div align="center">
-<embed src="https://github.com/mages/R_in_Insurance_2013/blob/master/R_in_Insurance_Programme_and_Abstracts.pdf?raw=true" width="590" height="810"> 
-</div>
+<div id="pdf">
+<p>It appears you don't have Adobe Reader or PDF support in this web
+    browser. <a href="http://github.com/mages/R_in_Insurance_2013/blob/master/R_in_Insurance_Programme_and_Abstracts.pdf?raw=true">Click here to download the PDF of the conference programme and abstracts.</a></p>
+    </div>
       </section>
     </div>
 
