--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-<p>This repository contains the presentation and R files of the first <em><a href="http://lamages.blogspot.com/p/the-first-conference-on-r-in-insurance.html">R in Insurance</a></em> conference held at <a href="http://www.cass.city.ac.uk/news-and-events/conferences/r-in-insurance">Cass Business School London</a>, 15 July 2013. You can download all files in a .tar.gz or .zip archive format via the links above, or individually from the <a href="https://github.com/mages/R_in_Insurance_2013">GitHub repository</a>.</p>
+<p>This repository contains the presentation and R files of the first <em><a href="http://www.cass.city.ac.uk/news-and-events/conferences/r-in-insurance">R in Insurance</a></em> conference held at <a href="http://www.cass.city.ac.uk/news-and-events/conferences/r-in-insurance">Cass Business School London</a>, 15 July 2013. You can download all files in a .tar.gz or .zip archive format via the links above, or individually from the <a href="https://github.com/mages/R_in_Insurance_2013">GitHub repository</a>.</p>
 
 <p>The 2013 R in Insurance conference builds upon the success of the <a href="http://www.rinfinance.com/">R in Finance</a> and <a href="https://www.rmetrics.org/">R/Rmetrics</a> events.</p>
 
