Added links to R code

--- a/index.html
+++ b/index.html
@@ -41,9 +41,23 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-<p>This repository contains the presentation and R files of the first <em><a href="http://www.cass.city.ac.uk/news-and-events/conferences/r-in-insurance">R in Insurance</a></em> conference held at <a href="http://www.cass.city.ac.uk/news-and-events/conferences/r-in-insurance">Cass Business School London</a>, 15 July 2013. You can download all files in a .tar.gz or .zip archive format via the links above, or individually from the <a href="https://github.com/mages/R_in_Insurance_2013">GitHub repository</a>.</p>
-
-<p>The 2013 R in Insurance conference builds upon the success of the <a href="http://www.rinfinance.com/">R in Finance</a> and <a href="https://www.rmetrics.org/">R/Rmetrics</a> events.</p>
+<p>This repository contains the presentation and R files of the first <em><a href="http://www.cass.city.ac.uk/news-and-events/conferences/r-in-insurance">R in Insurance</a></em> conference held at <a href="http://www.cass.city.ac.uk/news-and-events/conferences/r-in-insurance">Cass Business School London</a>, 15 July 2013. The <em>R in Insurance</em> conference builds upon the success of the <a href="http://www.rinfinance.com/">R in Finance</a> and <a href="https://www.rmetrics.org/">R/Rmetrics</a> events.
+</p><p>
+You can download all files in a .tar.gz or .zip archive format via the links above, or individually from the <a href="https://github.com/mages/R_in_Insurance_2013">GitHub repository</a>.</p>
+<p>
+Additionally to the slides many presenters have made their R code available as well.
+<ul>
+<li>Alexander McNeil has shared the examples of the <a href="http://github.com/mages/R_in_Insurance_2013/blob/master/session%201/CreditRiskPlus.R">CreditRisk+ model</a> he presented.</li>
+<li> Lola Miranda has made a Windows version of the double chain-ladder package <a href="http://www.cassknowledge.com/research/article/double-chain-ladder-cass-knowledge">DCL</a> available via the <a href="http://www.cassknowledge.com">Cass knowledge web site</a>.</li>
+<li>Alessandro Carrato's <a href="http://code.google.com/p/chainladder/source/browse/branches/alessandro/R/StochasticReserving.R">1-year re-reserving code</a> is hosted on the ChainLadder project <a href="http://code.google.com/p/chainladder">web site</a>.</li>
+<li>Giorgio Spedicato's life contingencies package is on <a href="http://cran.r-project.org/web/packages/lifecontingencies/index.html">CRAN</a> already. 
+</li>
+<li>Simon Brickman and Adam Rich's HTML presentation and underlying R code for <i><a href="http://github.com/mages/R_in_Insurance_2013/tree/master/session%204/1%20Simon">Automated Reporting</a></i> is included in the GitHub repository. 
+</li>
+<li>Stefan Eppert pointed out that <a href="http://www.katrisk.com">KatRisk</a> published an illustrative <a href="http://www.katrisk.com/build-a-model.html">catastrophe model in R</a>.</li>
+<li>Hugh Shanahan's code to ￼integrate R with Azure for high-throughput analysi is on <a href="http://github.com/hughshanahan">GitHub</a>.</li>
+</ul>
+</p>
 
 <p>The organisers, <a href="http://lamages.blogspot.com/">Markus Gesmann</a> and <a href="http://www.cass.city.ac.uk/experts/a.tsanakas">Andreas Tsanakas</a>, gratefully acknowledge the sponsorship of <a href="http://www.mango-solutions.com/">Mango Solutions</a> and <a href="http://www.cybaea.net/">CYBAEA</a>.
 
