--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ You can download all files in a .tar.gz or .zip archive format via the links abo
 <p>
 Additionally to the slides many presenters have made their R code available as well.
 <ul>
-<li>Alexander McNeil has shared the examples of the <a href="http://github.com/mages/R_in_Insurance_2013/blob/master/session%201/CreditRiskPlus.R">CreditRisk+ model</a> he presented.</li>
-<li> Lola Miranda has made a Windows version of the double chain-ladder package <a href="http://www.cassknowledge.com/research/article/double-chain-ladder-cass-knowledge">DCL</a> available via the <a href="http://www.cassknowledge.com">Cass knowledge web site</a>.</li>
+<li>Alexander McNeil shared the examples of the <a href="http://github.com/mages/R_in_Insurance_2013/blob/master/session%201/CreditRiskPlus.R">CreditRisk+ model</a> he presented.</li>
+<li> Lola Miranda made a Windows version of the double chain-ladder package <a href="http://www.cassknowledge.com/research/article/double-chain-ladder-cass-knowledge">DCL</a> available via the <a href="http://www.cassknowledge.com">Cass knowledge web site</a>.</li>
 <li>Alessandro Carrato's <a href="http://code.google.com/p/chainladder/source/browse/branches/alessandro/R/StochasticReserving.R">1-year re-reserving code</a> is hosted on the ChainLadder project <a href="http://code.google.com/p/chainladder">web site</a>.</li>
 <li>Giorgio Spedicato's life contingencies package is on <a href="http://cran.r-project.org/web/packages/lifecontingencies/index.html">CRAN</a> already. 
 </li>
