--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Additionally to the slides many presenters have made their R code available as w
 <li>Simon Brickman and Adam Rich's HTML presentation and underlying R code for <i><a href="http://github.com/mages/R_in_Insurance_2013/tree/master/session%204/1%20Simon">Automated Reporting</a></i> is included in the GitHub repository. 
 </li>
 <li>Stefan Eppert pointed out that <a href="http://www.katrisk.com">KatRisk</a> published an illustrative <a href="http://www.katrisk.com/build-a-model.html">catastrophe model in R</a>.</li>
-<li>Hugh Shanahan's code to ￼integrate R with Azure for high-throughput analyssi is on <a href="http://github.com/hughshanahan">GitHub</a>.</li>
+<li>Hugh Shanahan's code to ￼integrate R with Azure for high-throughput analysis is on <a href="http://github.com/hughshanahan">GitHub</a>.</li>
 </ul>
 </p>
 
